optimize default template

--- a/Resources/views/SocialButtons/facebook-button.html.twig
+++ b/Resources/views/SocialButtons/facebook-button.html.twig
@@ -6,7 +6,7 @@
 {% set params = '?url=' ~ url ~ '&locale=' ~ locale ~ '&send=' ~ send ~ '&showFaces=' ~ showFaces %}
 
 {% spaceless %}
-    <a class="btn btn-social-icon btn-facebook" onclick="facebook()" href="javascript:void(0)">
+    <a class="btn-share-facebook" onclick="facebook()" href="javascript:void(0)">
         <i class="fa fa-facebook"></i>
         <div id="fb-root"></div>
     </a>
