--- a/Resources/views/SocialButtons/linkedin-button.html.twig
+++ b/Resources/views/SocialButtons/linkedin-button.html.twig
@@ -6,9 +6,25 @@
 
 {% spaceless %}
 
-<script src="//platform.linkedin.com/in.js" type="text/javascript">
-  lang: {{ locale }}
+<a class="btn-share-linkedin" onclick="linkedIn()" href="javascript:void(0)">
+    <i class="fa fa-linkedin"></i>
+    <div id="fb-root"></div>
+</a>
+<script>
+    function linkedIn() {
+        var param = '?url={{ url }}' + encodeURI('&locale') + '={{ locale }}';
+        var dualScreenLeft = window.screenLeft != undefined ? window.screenLeft : screen.left;
+        var dualScreenTop = window.screenTop != undefined ? window.screenTop : screen.top;
+        var width = window.innerWidth ? window.innerWidth : document.documentElement.clientWidth ? document.documentElement.clientWidth : screen.width;
+        var height = window.innerHeight ? window.innerHeight : document.documentElement.clientHeight ? document.documentElement.clientHeight : screen.height;
+
+        var h = 600;
+        var w = 800;
+        var left = ((width / 2) - (w / 2)) + dualScreenLeft;
+        var top = ((height / 2) - (h / 2)) + dualScreenTop;
+
+        window.open('http://www.linkedin.com/shareArticle' + param +'','sharer','toolbar=0,status=0,width=' + w + ',height=' + h + ',top=' + top + ',left=' + left);
+    }
 </script>
 
- <script type="IN/Share" data-url="{{ url }}" ></script>
 {% endspaceless %}
