--- a/Resources/views/SocialButtons/twitter-button.html.twig
+++ b/Resources/views/SocialButtons/twitter-button.html.twig
@@ -14,7 +14,7 @@
 {% endif %}
 
 {% spaceless %}
-<a class="btn btn-social-icon btn-twitter" href="https://twitter.com/intent/tweet{{ params }}">
+<a class="btn-share-twitter" href="https://twitter.com/intent/tweet{{ params }}">
     <i class="fa fa-twitter"></i>{{ text }}
 </a>
 <script>
