--- a/Resources/public/libs/bootstrap-social/bootstrap-social.scss
+++ b/Resources/public/libs/bootstrap-social/bootstrap-social.scss
@@ -1,3 +1,5 @@
+@import "../bootstrap-sass-official/assets/stylesheets/bootstrap/variables";
+@import "../bootstrap-sass-official/assets/stylesheets/bootstrap/mixins";
 /*
  * Social Buttons for Bootstrap
  *
