--- a/web/css/1d2d1e1.css
+++ b/web/css/1d2d1e1.css
@@ -1129,3 +1129,11 @@ input[type="button"].btn-block {
 .btn-yahoo .badge {
   color: #720e9e;
   background-color: #fff; }
+
+.btn-share, .btn-share-twitter, .btn-share-facebook, .btn-share-googleplus, .btn-share-linkedin {
+  height: 20px;
+  width: 20px; }
+
+.btn-share i, .btn-share-twitter i, .btn-share-facebook i, .btn-share-googleplus i, .btn-share-linkedin i {
+  font-size: 1em !important;
+  margin-top: -6px; }
