--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -28,6 +28,8 @@
         {{ linkedInButton() }}
 
         {{ pinterestButton() }}
+
+        <a class="btn-share-youtube"><i></i></a>
     {% endblock %}
     </body>
 </html>
