--- a/Resources/views/SocialButtons/twitter-button.html.twig
+++ b/Resources/views/SocialButtons/twitter-button.html.twig
@@ -14,8 +14,8 @@
 {% endif %}
 
 {% spaceless %}
-<a class="btn-share-twitter" href="https://twitter.com/intent/tweet{{ params }}">
-    <i class="fa fa-twitter"></i>{{ text }}
+<a class="{{ class_a }}" href="https://twitter.com/intent/tweet{{ params }}">
+    <i class="{{ class_i }}"></i>{{ text }}
 </a>
 <script>
     !function (d, s, id) {
